# scoobiii-rinha-2026

./: .gitignore  CODEX.md  Cargo.toml  Dockerfile  Makefile  README.md  README.submission.md  auto-update.sh  docker-compose.submission.yml  docker-compose.yml  info.json  nginx-termux.conf  nginx.conf  nginx.conf.bak  prepare_submission.sh  scoobiii-rinha  scoobiii.json  server_final  server_simple_json.c  start.sh  test_quantization.py  test_quantization_simple.py  tune.sh
.github/workflows/: docker-build.yml
benches/: quantization_bench.rs
src/: ivf.c  ivf.h  lib.rs  main.c  main.rs  preprocess.c  quantization.rs  server_final.c  server_standalone.c  vectorizer.h
submission/: docker-compose.yml  nginx.conf
tools/: preprocess.c
