[package]
name = "rinha-quant-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
memmap2 = "0.9"
rayon = "1"

# Vector search
usearch = "0.8"

# Data
ndarray = "0.15"
rand = "0.8"

# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "quantization_bench"
harness = false
